# sphinx_test_docs

./: README.md
Deliverables/2_1_dataset/: scraper.ipynb
Deliverables/2_5_python_function/: 2_5_python_function.ipynb  African Americans_cm.npy  Other races_cm.npy
Deliverables/2_6_xai_on_model/: resave_pil_images.py
Deliverables/3_1_form_results/: human_level_performance_accuracy_results.xlsx
Deliverables/3_7_mlp_from_scratch/: MLP_from_Scratch.ipynb
Deliverables/4_1_think_aloud_study/: categorized_reviews.csv
Deliverables/5_presentation/: notes.md
Deliverables/work_learning_log/: Assessment Rubric - Y1C_2023-24_ADSAI.xlsx  Worklog - Y1C_2023-24_ADSAI.xlsx
Proposal_template/: proposal.docx
Template/: JupyterNotebook_template_Y1D_2023-24.ipynb
books/: c3bf-b0be-42e0-a9de-e8aa0058aeb1.txt  eaa4-de6e-40a6-842f-3a01f6ffdae0.txt
other_files/: LIME.ipynb  plan_for_project.docx  text_for_presentation.docx  wyklad_16.md
other_files/deep learning with python exercises/: chapter_7.ipynb
other_files/new_scraper/: clean_empty_classroom_folder.py  clean_full_classroom_folder.py  clean_main_folder.py  resave_pil_images.py  split_dataset.py
other_files/testing_purposes/: mlp_with_my_project.ipynb
other_files/web_scraper/: clean_empty_classroom_folder.py
other_files/wyklady_zuzia/: prezentacja_2.md  wyklad_21.md
poetry-project/titanic/: pyproject.toml  titanic.py  titanic_refactored.py  titanic_with_docstring.py
work_learning_log/: Self-Assessment Rubric Block - Y1D_2023-24_ADSAI.xlsx  Worklog - Y1D_2023-24_ADSAI.xlsx
(+72 files in other folders)
