[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["DominikPtaszek231643 <231643@buas.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
